don't escape html of include by using double equal sign line indicator

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -30,7 +30,7 @@ html lang="en"
       section.welcome.grid_12
         h1 Sinatra + Mongoid prototyping application.
         hr
-        = yield
+        == yield
   
   script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"
   script type="text/javascript" src="/javascripts/application.js"
